// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination Matches the desktop snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: 1.5rem;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  min-height: 1.75rem;
}

.c3 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c1 {
  color: #1B1C1E;
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: 1.5rem;
  margin: var(--spacing-3x) 0;
}

.c2 {
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  line-height: 1.25rem;
  margin: 0;
}

<nav
  aria-labelledby="uuid1"
  class="c0 pagination-container undefined"
>
  <div
    aria-live="off"
    class="pagination-label"
    role="status"
  >
    <h3
      class="c1 c2"
      id="uuid1"
    >
      <span
        class="c3"
      >
        Pagination - 
      </span>
      0–0 of 0 results
    </h3>
  </div>
</nav>
`;

exports[`Pagination Matches the desktop snapshot with multiples digits page numbers 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: 1.5rem;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  min-height: 1.75rem;
}

.c3 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c1 {
  color: #1B1C1E;
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: 1.5rem;
  margin: var(--spacing-3x) 0;
}

.c2 {
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  line-height: 1.25rem;
  margin: 0;
}

<nav
  aria-labelledby="uuid1"
  class="c0 pagination-container undefined"
>
  <div
    aria-live="off"
    class="pagination-label"
    role="status"
  >
    <h3
      class="c1 c2"
      id="uuid1"
    >
      <span
        class="c3"
      >
        Pagination - 
      </span>
      0–0 of 0 results
    </h3>
  </div>
</nav>
`;

exports[`Pagination Matches the mobile snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: 2.25rem;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  min-height: 1.75rem;
}

.c3 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c1 {
  color: #1B1C1E;
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: 1.5rem;
  margin: var(--spacing-3x) 0;
}

.c2 {
  font-size: 1rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  line-height: 1.5rem;
  margin: 0;
}

<nav
  aria-labelledby="uuid1"
  class="c0 pagination-container undefined"
>
  <div
    aria-live="off"
    class="pagination-label"
    role="status"
  >
    <h3
      class="c1 c2"
      id="uuid1"
    >
      <span
        class="c3"
      >
        Pagination - 
      </span>
      0–0 of 0 results
    </h3>
  </div>
</nav>
`;

exports[`Pagination Matches the mobile snapshot with multiples digits page numbers 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: 2.25rem;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  min-height: 1.75rem;
}

.c3 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c1 {
  color: #1B1C1E;
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: 1.5rem;
  margin: var(--spacing-3x) 0;
}

.c2 {
  font-size: 1rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  line-height: 1.5rem;
  margin: 0;
}

<nav
  aria-labelledby="uuid1"
  class="c0 pagination-container undefined"
>
  <div
    aria-live="off"
    class="pagination-label"
    role="status"
  >
    <h3
      class="c1 c2"
      id="uuid1"
    >
      <span
        class="c3"
      >
        Pagination - 
      </span>
      0–0 of 0 results
    </h3>
  </div>
</nav>
`;
